# ormos

./: .gitignore  Cargo.toml  Dockerfile  Makefile  Readme.md  flake.nix  sample_config.yml
.cargo/: vendor
ormos/: Cargo.toml
ormos/src/: main.rs
ormos/src/config/: listener.rs  mod.rs  parser_kind.rs
rpx/: Cargo.toml
rpx/src/: lib.rs
rpx/src/parser/: http.rs  mod.rs
rpx/src/resolver/: fallback.rs  filter.rs  mod.rs  rewrite.rs  void.rs
rpx/src/resolver/constant/: mod.rs  port_binding.rs
rpx/src/resolver/dns/: async_resolver.rs  mod.rs  service.rs
src/: config.rs  dns.rs  http.rs  lib.rs  sni.rs  tls.rs
src/parser/: http.rs  tls.rs
src/resolver/: config_file.rs  dns.rs  fallback.rs  filter.rs  mod.rs  void.rs
