[package]
name = "rpx"
version = "0.3.1"
edition.workspace = true 
authors.workspace = true

[dependencies]
tokio = { version = "~1.18", features = ["net"] }
futures = "~0.3"
clap = { version = "~3.1", features = ["default", "derive", "cargo"] }
trust-dns-resolver = { version = "~0.21", features = ["serde-config"] }
rustls = { version = "~0.20" } 
tracing = "~0.1"
anyhow = "~1.0"
bytes = "~1.1"
serde_yaml = "~0.8"
serde = { version = "~1.0", features = ["derive", "rc"] }
rand = { version = "~0.8", features = ["small_rng"] }
thiserror = "1.0.37"
pin-project = "1.0.12"
tower = { version = "0.4.13" }
regex = "1.7.0"
serde_regex = "1.1.0"
test-case = "2.2.2"

[dev-dependencies]
indoc = "~1.0"
tokio = { version = "~1.18", features = ["full"]}

[features]
filter = [ "tower/filter" ]
